# OpenDiPaCo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
diagrams/: security-network-model.md
docs/: async-transport-gaps.md  decentralized-worker-loop-design.md  gpu-validation.md  internet-scale-plan.md  phase2-design.md  phase3-design.md  phase4-design.md  remaining-gaps.md  viability-roadmap.md  w1-nat-design.md  w2-bandwidth-design.md  w3-vram-design.md  w4-churn-design.md  w5-task-sizing-design.md  w6-client-design.md  w7-data-decentralization-design.md  w8-data-poisoning-design.md  w8-eclipse-sybil-design.md
examples/: bandwidth_budget.py  data_scaled_sweep_gpu.py  ingest_c4_sharded.py  launch_cluster.py  observe_metrics.py  run_tls.py  scale_sweep_gpu.py  train_c4.py  train_distributed.py  train_em.py  train_scheduled.py  train_scheduled_distributed.py  train_sharded.py  train_synthetic.py  validate_c4.py  validate_c4_gpu.py  validate_churn.py  validate_decentralized.py  validate_dynamics.py  validate_eclipse.py  validate_nat.py  validate_poisoning.py  validate_robustness.py  vram_budget.py
src/opendipaco/: __init__.py  checkpoint.py  config.py  distributed.py  em.py  inference.py  init.py  model.py  modules.py  topology.py  validation.py
src/opendipaco/backend/: __init__.py  base.py  local.py  torch_dist.py
src/opendipaco/data/: __init__.py  c4.py  sharding.py  spec.py  streaming.py  text.py
src/opendipaco/launch/: __init__.py  cli.py  client.py  config.py  manifest.py  roles.py
src/opendipaco/optim/: __init__.py  adam8bit.py  diloco.py
src/opendipaco/routing/: __init__.py  base.py  discriminative.py  featurizers.py  kmeans.py
src/opendipaco/schedule/: __init__.py  aggregate.py  assignment.py  compress.py  distributed.py  guard.py  identity.py  observability.py  ownership.py  p2p.py  probe.py  quorum.py  ratelimit.py  reactor.py  reputation.py  scheduler.py  sharded.py  throttle.py  tls.py  tracker.py  wire.py
src/opendipaco/train/: __init__.py  loop.py  memory.py
tests/: conftest.py  test_aggregate.py  test_assignment.py  test_checkpoint.py  test_churn.py  test_compress.py  test_data_pipeline.py  test_data_spec.py  test_decentralized.py  test_decentralized_epochs.py  test_decentralized_worker.py  test_drain.py  test_early_stopping.py  test_eclipse.py  test_em_overlap.py  test_engine.py  test_failover.py  test_graceful_leave.py  test_heterogeneity.py  test_identity_tracker.py  test_inference.py  test_init_packing.py  test_join.py  test_launch.py  test_model.py  test_observability.py  test_ownership.py  test_p2p.py  test_persistence.py  test_polish_bundle.py  test_probe.py  test_quorum.py  test_redundancy.py  test_replication.py  test_reputation.py  test_routing.py  test_scheduler.py  test_scheduler_distributed.py  test_shard_cache.py  test_sharded.py  (+19 more)
