[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendipaco"
version = "0.1.0"
description = "An open implementation of DiPaCo (Distributed Path Composition) for modular, low-communication language-model training."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mason Flint" }]
keywords = ["dipaco", "diloco", "distributed-training", "mixture-of-experts", "language-models"]
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "numpy>=1.24",
]

[project.optional-dependencies]
data = ["datasets>=2.19", "tokenizers>=0.19"]
launch = ["pyyaml>=6.0", "cryptography>=41"]
# NAT traversal / relay tier (W1; docs/w1-nat-design.md): libp2p as the
# transport+NAT substrate. Optional so the default cpu/cu130 installs are
# untouched; the libp2p transport is opt-in (transport: libp2p) and its tests
# importorskip libp2p.
nat = ["libp2p>=0.6"]
# torch build selectors (uv routes these to the right index, see [tool.uv]):
# `uv sync --extra cpu` for CI / CPU boxes, `--extra cu130` for this GPU.
cpu = ["torch>=2.4"]
cu130 = ["torch>=2.4"]

[project.scripts]
opendipaco = "opendipaco.launch.cli:main"

[project.urls]
Homepage = "https://github.com/masonflint44/opendipaco"
Paper = "https://arxiv.org/abs/2403.10616"

# -- uv ----------------------------------------------------------------------
# Dev tooling lives in a PEP 735 dependency group (installed by `uv sync` by
# default). Run things with `uv run` (e.g. `uv run pytest`, `uv run opendipaco`).
[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5", "pyyaml>=6.0", "cryptography>=41"]

[tool.uv]
# cpu and cu130 are mutually exclusive torch builds; pick exactly one at sync.
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.hatchling.build.targets.wheel]
packages = ["src/opendipaco"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
